--- a/data/style.css
+++ b/data/style.css
@@ -8,11 +8,27 @@ h1 {
   font-size: 1.8rem; 
   color: white;
 }
-
+h2{
+  font-size: 1.2rem; 
+  color: white;
+}
 p { 
   font-size: 1.4rem;
 }
-
+.Alarmtext {
+  font-size: 0.8rem;
+  color: #1282A2;
+}
+li {
+  display: inline;
+  float: left;
+}
+.menubar {
+  display: block;
+  padding: 8px;
+  background-color:  #0A1128;
+  color: #FEFCFB;
+}
 .topnav { 
   overflow: hidden; 
   background-color: #0A1128;
@@ -106,4 +122,10 @@ button {
 }
 .button-off:hover {
   background-color: #252524;
-} 
+}
+.button-setdate{
+  width: 300px;
+  background-color: #034078;
+}
+
+
